2001-11-30  Harri Porten  <porten@kde.org>

	* main.cpp: set focus to password field if it's missing on startup.
	Patch by Per Winkvist <nd96pwt at adeptus.student.hig.se>.

2001-11-26  Harri Porten  <porten@kde.org>

	* applied patch for USB modems by Oliver Gantz <Oliver.Gantz@epost.de>

2001-11-23  Harri Porten  <porten@kde.org>

	* connect.cpp: finally implemented often requested feature:
	multiple init strings. Only two for now but it's now easy
	to increase (PPPData::NumInitStrings + GUI)

2001-11-08  Harri Porten  <porten@kde.org>

	* pppdata.cpp: fixed renaming of default account. Bug reported
	  by william.stephenson at ncl.ac.uk.

2001-05-21  Harri Porten  <porten@kde.org>

	* modem.cpp: 460800 speed fix from msade@cs.pitt.edu

2001-04-13  Harri Porten  <porten@kde.org>

	* runtests.cpp: fixed startup crash if 'pppd --version' failed
	* combined PAP/CHAP patch by Ingo Heeskens <ingo@fivemile.org>
	
2001-04-08  Harri Porten  <porten@kde.org>

	* option for turning off dial tone detection. Modem string
	  defaults to ATX3.
	* Solaris fixes: added missing include, less restrictive compile check
	* main.cpp: deactivated KNotify::beep() in pppd-died signal handler,
	  due to appearant race conditions when working remote
	* ppplog.cpp: hardcoded list of syslog files, including my Debian one
	* pppdata.cpp: i18n'ed name of account copy
	* ...

>>>>>>>>>>>>>>>>>>>>>>>>>>>> KDE 2.1.0 released <<<<<<<<<<<<<<<<<<<<<<<<<<<	
2001-01-05  Harri Porten  <porten@kde.org>

	* Solaris patches by Keith Refson <Keith.Refson@earth.ox.ac.uk>
	and Stephen Usher <Stephen.Usher@earth.ox.ac.uk>. Still needs some
	tweaking.
	* logview/monthly.cpp: sensible sort order for each column. cleanup.

>>>>>>>>>>>>>>>>>>>>>>>>>>>> KDE 2.0.1 released <<<<<<<<<<<<<<<<<<<<<<<<<<<
	
2000-11-27  Harri Porten  <harri@trolltech.com>

	* applied 7 bit fix from KDE 1.x for CompuServe users.

2000-11-21  Harri Porten  <harri@trolltech.com>
